# rcoi

./: .gitignore  .travis.yml  Dockerfile  README.md
backend/: CMakeLists.txt  README.md  compile_commands.json  config.xml  create.sql  test-docker-compose.yaml
backend/.travis/: deploy.sh  travis.pub
backend/Comments/: Comments.h  Model.cpp  main.cpp
backend/Dockerfiles/: Dockerfile  Dockerfile_comments  Dockerfile_gateway  Dockerfile_likehistory  Dockerfile_news  Dockerfile_users  docker-compose.yaml
backend/Gateway/: CMakeLists.txt  Comments.cpp  Comments.h  LikeHistory.cpp  LikeHistory.h  Model.cpp  Model.h  News.cpp  News.h  Router.h  Users.cpp
backend/LikeHistory/: LikeHistory.cpp  LikeHistory.h  Model.cpp
backend/News/: Model.h  News.cpp  News.h
backend/Shared/: Base.h  Congif.h  HttpAssist.h  JsonStructs.h
backend/Tests/: Tests.cpp
backend/Users/: Model.cpp  Model.h  Users.cpp  Users.h  main.cpp
backend/scripts/: commentsRun.sh  fullRebuild_docker.sh  gatewayRun.sh  generateTestsHtml.txt  kill.sh  likehistoryRun.sh  newsRun.sh  prodRun.sh  run.sh  usersRun.sh
configs/: default  nginx.conf
front/: log-frontend.txt  package.json
front/public/: index.html
front/src/: App.js
front/src/components/Article/: index.js
front/src/components/ArticleFull/: index.js
front/src/components/CommentForm/: index.js
front/src/components/Comments/: index.js
front/src/components/CreateNews/: index.js
front/src/components/Delete/: index.js
front/src/components/History/: index.js
front/src/components/Login/: index.js
front/src/components/Register/: index.js
front/src/components/Titles/: index.js
lab1/: .travis.yml.old  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Router.h  conanfile.txt  main.cpp
lab1/.travis/: deploy.sh
lab1/test/: index.js  package.json
lab1v2/: CMakeLists.txt  Router.h  main.cpp
lab1v2/.travis/: deploy.sh
lab2/: .gitignore  CMakeLists.txt  Dockerfile  Gateway_docker  README.md  conanfile.txt  config.xml  create.sql  dump.sql  prodRun.sh  run.sh  run_tests.sh
lab2/.travis/: deploy.sh  travis.enc
lab2/Comments/: Comments.cpp  Comments.h  HelloWorld.cpp  HelloWorld.h  Model.cpp  Model.h  Router.h  Sum.cpp  Sum.h  main.cpp
lab2/Dockerfiles/: Dockerfile_comments  Dockerfile_gateway  Dockerfile_likehistory  Dockerfile_news  Dockerfile_users
lab2/Gateway/: Comments.cpp  LikeHistory.cpp  Model.cpp  Model.h  News.cpp  News.h  Router.h  TaskQueue.h  Users.cpp  Users.h  main.cpp
lab2/LikeHistory/: LikeHistory.cpp  LikeHistory.h  Model.cpp  Model.h  Router.h  main.cpp
lab2/News/: Model.cpp  Model.h  News.cpp  News.h  Router.h  main.cpp
lab2/Shared/: Base.h  Congif.h  Database.h  HttpAssist.h  JsonStructs.h
lab2/Tests/: Tests.cpp
lab2/Users/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Model.cpp  Model.h  Router.h  Users.cpp  Users.h  main.cpp
lab2/scripts/: run.sh
lab3/: package.json  server.js
lab3/public/: index.html
lab3/src/: App.js  HttpAssist.js
lab3/src/components/ArticleFull/: index.js
lab3/src/components/CommentForm/: index.js
lab3/src/components/Comments/: index.js
lab3/src/components/CreateNews/: index.js  style.css
lab3/src/components/Delete/: index.js
lab3/src/components/Editor/: index.js
lab3/src/components/History/: index.js
lab3/src/components/LikedEntity/: index.js
lab3/src/components/Login/: index.js  style.css
lab4/: app.js
lab4/views/: auth.ejs  tokens.ejs
(+4 files in other folders)
